<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_bg"
    android:orientation="vertical">


    <TextView
        android:id="@+id/title_conf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/Hostname"
        android:layout_centerHorizontal="false"
        android:layout_gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:paddingRight="40dp"
        android:text="@string/title_conf"
        android:textSize="20dp"
        android:textStyle="bold" />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/secured"
            style="@android:style/Widget.DeviceDefault.Light.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:clickable="false"
            android:linksClickable="false"
            android:text="@string/secured"
            android:textColor="#009688"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/non_secured"
            style="@android:style/Widget.DeviceDefault.Light.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/non_secured"
            android:textColor="#009688"
            android:textStyle="bold" />
    </RadioGroup>

    <EditText
        android:id="@+id/Hostname"
        android:layout_width="match_parent"

        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/hostname"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/Port"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/Port"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="77dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_custom"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/buttonCancel" />

        <Button
            android:id="@+id/Ok"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/btn_custom"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/Ok"
            android:textColor="@android:color/background_dark" />
    </LinearLayout>

</LinearLayout>