<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="model.Login.LoginActivity">


    <ImageView
        android:id="@+id/menu"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="365dp"
        android:layout_marginTop="0dp"
        android:clickable="true"
        android:src="@drawable/menu" />


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_subtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="30dp"
        android:text="@string/app_name"
        android:textSize="45dp" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag"
        android:textSize="17sp"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        android:layout_above="@id/username"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/username"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/roboto_regular"
        android:layout_above="@id/password"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />





    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/login"
        android:textColor="@android:color/background_dark" />

    <CheckBox
        android:id="@+id/saveLoginCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/saveLoginCheckBox"
        android:textColor="@android:color/tertiary_text_dark"
        android:textSize="19sp" />

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password"
        android:visibility="invisible" />



</RelativeLayout>